--- a/firmware/nixie_clock.ioc
+++ b/firmware/nixie_clock.ioc
@@ -1,5 +1,5 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_1
 ADC1.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,master
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-2\#ChannelRegularConversion=1
@@ -27,9 +27,9 @@ Mcu.Name=STM32F100C(4-6)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PA6
-Mcu.Pin11=PA7
-Mcu.Pin12=PB0
+Mcu.Pin10=PA7
+Mcu.Pin11=PB0
+Mcu.Pin12=PB1
 Mcu.Pin13=PB12
 Mcu.Pin14=PA9
 Mcu.Pin15=PA10
@@ -40,12 +40,12 @@ Mcu.Pin19=VP_RTC_VS_RTC_Activate
 Mcu.Pin2=PD0-OSC_IN
 Mcu.Pin20=VP_RTC_No_RTC_Output
 Mcu.Pin3=PD1-OSC_OUT
-Mcu.Pin4=PA0-WKUP
-Mcu.Pin5=PA1
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA4
-Mcu.Pin9=PA5
+Mcu.Pin4=PA1
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PA4
+Mcu.Pin8=PA5
+Mcu.Pin9=PA6
 Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -63,7 +63,8 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA0-WKUP.Signal=ADCx_IN0
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=HV_MON_BUF
 PA1.Signal=ADCx_IN1
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=UART_BL_RX
@@ -108,6 +109,9 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=nPOL
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=DIM_POT
+PB1.Signal=ADCx_IN9
 PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=HV_EN
 PB12.Locked=true
@@ -150,7 +154,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.ADCFreqValue=12000000
 RCC.AHBFreq_Value=24000000
 RCC.APB1Freq_Value=24000000
@@ -161,29 +165,29 @@ RCC.FCLKCortexFreq_Value=24000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=24000000
 RCC.HSEDivPLL=RCC_HSE_PREDIV_DIV2
-RCC.HSE_VALUE=16000000
-RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEDivPLL,HSE_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSource,RTCClockSelection,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,VCOOutput2Freq_Value
+RCC.HSE_VALUE=24000000
+RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEDivPLL,HSE_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLSource,RTCClockSelection,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,VCOOutput2Freq_Value
 RCC.MCOFreq_Value=24000000
 RCC.PLLCLKFreq_Value=24000000
 RCC.PLLMCOFreq_Value=12000000
-RCC.PLLMUL=RCC_PLL_MUL3
 RCC.PLLSource=RCC_PLLSOURCE_HSE
 RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
 RCC.RTCFreq_Value=32768
 RCC.SYSCLKFreq_VALUE=24000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSE
 RCC.TimSysFreq_Value=24000000
-RCC.VCOOutput2Freq_Value=8000000
-SH.ADCx_IN0.0=ADC1_IN0,IN0
-SH.ADCx_IN0.ConfNb=1
+RCC.VCOOutput2Freq_Value=12000000
 SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
+SH.ADCx_IN9.0=ADC1_IN9,IN9
+SH.ADCx_IN9.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=12.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_1LINE
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,DataSize
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,DataSize,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_MASTER
