--- a/firmware/nixie_clock.ioc
+++ b/firmware/nixie_clock.ioc
@@ -25,28 +25,31 @@ Mcu.IP8=USART2
 Mcu.IPNb=9
 Mcu.Name=STM32F100C(4-6)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PC14-OSC32_IN
-Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PA7
-Mcu.Pin11=PB0
-Mcu.Pin12=PB1
-Mcu.Pin13=PB12
-Mcu.Pin14=PA9
-Mcu.Pin15=PA10
-Mcu.Pin16=PA13
-Mcu.Pin17=PA14
-Mcu.Pin18=PB3
-Mcu.Pin19=VP_RTC_VS_RTC_Activate
-Mcu.Pin2=PD0-OSC_IN
-Mcu.Pin20=VP_RTC_No_RTC_Output
-Mcu.Pin3=PD1-OSC_OUT
-Mcu.Pin4=PA1
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA4
-Mcu.Pin8=PA5
-Mcu.Pin9=PA6
-Mcu.PinsNb=21
+Mcu.Pin0=PC13-TAMPER-RTC
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PA6
+Mcu.Pin11=PA7
+Mcu.Pin12=PB0
+Mcu.Pin13=PB1
+Mcu.Pin14=PB12
+Mcu.Pin15=PA9
+Mcu.Pin16=PA10
+Mcu.Pin17=PA13
+Mcu.Pin18=PA14
+Mcu.Pin19=PA15
+Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=PB3
+Mcu.Pin21=PB4
+Mcu.Pin22=VP_RTC_VS_RTC_Activate
+Mcu.Pin23=VP_SYS_VS_Systick
+Mcu.Pin3=PD0-OSC_IN
+Mcu.Pin4=PD1-OSC_OUT
+Mcu.Pin5=PA1
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA4
+Mcu.Pin9=PA5
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F100C4Tx
@@ -74,12 +77,17 @@ PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=HB_LED2
+PA15.Locked=true
+PA15.Signal=GPIO_Output
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=UART_VCP_TX
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=UART_VCP_RX
+PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA4.GPIOParameters=GPIO_Label
@@ -118,6 +126,12 @@ PB12.Locked=true
 PB12.Signal=GPIO_Output
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-TRACESWO
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=HB_LED1
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PC13-TAMPER-RTC.Mode=RTC OUT
+PC13-TAMPER-RTC.Signal=RTC_OUT
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
@@ -164,19 +178,20 @@ RCC.APB2TimFreq_Value=24000000
 RCC.FCLKCortexFreq_Value=24000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=24000000
-RCC.HSEDivPLL=RCC_HSE_PREDIV_DIV2
-RCC.HSE_VALUE=24000000
-RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEDivPLL,HSE_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLSource,RTCClockSelection,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSource,RTCClockSelection,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,VCOOutput2Freq_Value
 RCC.MCOFreq_Value=24000000
 RCC.PLLCLKFreq_Value=24000000
 RCC.PLLMCOFreq_Value=12000000
+RCC.PLLMUL=RCC_PLL_MUL3
 RCC.PLLSource=RCC_PLLSOURCE_HSE
 RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
 RCC.RTCFreq_Value=32768
 RCC.SYSCLKFreq_VALUE=24000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSE
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=24000000
-RCC.VCOOutput2Freq_Value=12000000
+RCC.VCOOutput2Freq_Value=8000000
+RTC.IPParameters=OutPut
+RTC.OutPut=RTC_OUTPUTSOURCE_CALIBCLOCK
 SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
 SH.ADCx_IN9.0=ADC1_IN9,IN9
@@ -197,9 +212,9 @@ USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
-VP_RTC_No_RTC_Output.Mode=RTC_OUT_NO
-VP_RTC_No_RTC_Output.Signal=RTC_No_RTC_Output
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
 isbadioc=false
