--- a/firmware/nixie_clock.ioc
+++ b/firmware/nixie_clock.ioc
@@ -32,16 +32,19 @@ Mcu.Pin11=PA7
 Mcu.Pin12=PB0
 Mcu.Pin13=PB1
 Mcu.Pin14=PB12
-Mcu.Pin15=PA9
-Mcu.Pin16=PA10
-Mcu.Pin17=PA13
-Mcu.Pin18=PA14
-Mcu.Pin19=PA15
+Mcu.Pin15=PB13
+Mcu.Pin16=PB14
+Mcu.Pin17=PB15
+Mcu.Pin18=PA9
+Mcu.Pin19=PA10
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB3
-Mcu.Pin21=PB4
-Mcu.Pin22=VP_RTC_VS_RTC_Activate
-Mcu.Pin23=VP_SYS_VS_Systick
+Mcu.Pin20=PA13
+Mcu.Pin21=PA14
+Mcu.Pin22=PA15
+Mcu.Pin23=PB3
+Mcu.Pin24=PB4
+Mcu.Pin25=VP_RTC_VS_RTC_Activate
+Mcu.Pin26=VP_SYS_VS_Systick
 Mcu.Pin3=PD0-OSC_IN
 Mcu.Pin4=PD1-OSC_OUT
 Mcu.Pin5=PA1
@@ -49,7 +52,7 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=24
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F100C4Tx
@@ -124,6 +127,18 @@ PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=HV_EN
 PB12.Locked=true
 PB12.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=PB_SET
+PB13.Locked=true
+PB13.Signal=GPIO_Input
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=PB_INC
+PB14.Locked=true
+PB14.Signal=GPIO_Input
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=PB_DEC
+PB15.Locked=true
+PB15.Signal=GPIO_Input
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-TRACESWO
 PB4.GPIOParameters=GPIO_Label
@@ -208,7 +223,8 @@ SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_MASTER
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.IPParameters=Channel-PWM Generation1 CH1
-USART1.IPParameters=VirtualMode
+USART1.IPParameters=VirtualMode,Parity
+USART1.Parity=PARITY_EVEN
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
