--- a/firmware/nixie_clock.ioc
+++ b/firmware/nixie_clock.ioc
@@ -1,9 +1,9 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC1.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_9
+ADC1.IPParameters=Rank-4\#ChannelRegularConversion,master,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,NbrOfConversionFlag
 ADC1.NbrOfConversionFlag=1
-ADC1.Rank-2\#ChannelRegularConversion=1
-ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.Rank-4\#ChannelRegularConversion=1
+ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
@@ -19,40 +19,40 @@ Mcu.IP2=RCC
 Mcu.IP3=RTC
 Mcu.IP4=SPI1
 Mcu.IP5=SYS
-Mcu.IP6=TIM3
-Mcu.IP7=USART1
-Mcu.IP8=USART2
-Mcu.IPNb=9
+Mcu.IP6=TIM2
+Mcu.IP7=TIM3
+Mcu.IP8=USART1
+Mcu.IP9=USART2
+Mcu.IPNb=10
 Mcu.Name=STM32F100C(4-6)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA6
-Mcu.Pin11=PA7
-Mcu.Pin12=PB0
+Mcu.Pin10=PA5
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
 Mcu.Pin13=PB1
 Mcu.Pin14=PB12
 Mcu.Pin15=PB13
 Mcu.Pin16=PB14
-Mcu.Pin17=PB15
-Mcu.Pin18=PA9
-Mcu.Pin19=PA10
+Mcu.Pin17=PA9
+Mcu.Pin18=PA10
+Mcu.Pin19=PA13
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA13
-Mcu.Pin21=PA14
-Mcu.Pin22=PA15
-Mcu.Pin23=PB3
-Mcu.Pin24=PB4
-Mcu.Pin25=VP_RTC_VS_RTC_Activate
-Mcu.Pin26=VP_SYS_VS_Systick
+Mcu.Pin20=PA14
+Mcu.Pin21=PA15
+Mcu.Pin22=PB3
+Mcu.Pin23=PB4
+Mcu.Pin24=VP_RTC_VS_RTC_Activate
+Mcu.Pin25=VP_SYS_VS_Systick
 Mcu.Pin3=PD0-OSC_IN
 Mcu.Pin4=PD1-OSC_OUT
-Mcu.Pin5=PA1
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA4
-Mcu.Pin9=PA5
-Mcu.PinsNb=27
+Mcu.Pin5=PA0-WKUP
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA4
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F100C4Tx
@@ -68,16 +68,23 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0-WKUP.GPIOParameters=GPIO_Label
+PA0-WKUP.GPIO_Label=ENC_A
+PA0-WKUP.Signal=S_TIM2_CH1_ETR
 PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=HV_MON_BUF
-PA1.Signal=ADCx_IN1
+PA1.GPIO_Label=ENC_B
+PA1.Signal=S_TIM2_CH2
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=UART_BL_RX
+PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA13.Locked=true
 PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
+PA14.Locked=true
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
 PA15.GPIOParameters=GPIO_Label
@@ -86,6 +93,7 @@ PA15.Locked=true
 PA15.Signal=GPIO_Output
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=UART_VCP_TX
+PA2.Locked=true
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.GPIOParameters=GPIO_Label
@@ -114,31 +122,25 @@ PA7.Mode=Simplex_Bidirectional_Master
 PA7.Signal=SPI1_MOSI
 PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=UART_BL_TX
+PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=nPOL
-PB0.Locked=true
-PB0.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=DIM_POT
+PB1.GPIO_Label=HV_MON_BUF
 PB1.Signal=ADCx_IN9
 PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=HV_EN
 PB12.Locked=true
 PB12.Signal=GPIO_Output
 PB13.GPIOParameters=GPIO_Label
-PB13.GPIO_Label=PB_SET
+PB13.GPIO_Label=ENC_PB
 PB13.Locked=true
 PB13.Signal=GPIO_Input
 PB14.GPIOParameters=GPIO_Label
-PB14.GPIO_Label=PB_INC
+PB14.GPIO_Label=nPOL
 PB14.Locked=true
-PB14.Signal=GPIO_Input
-PB15.GPIOParameters=GPIO_Label
-PB15.GPIO_Label=PB_DEC
-PB15.Locked=true
-PB15.Signal=GPIO_Input
+PB14.Signal=GPIO_Output
+PB3.Locked=true
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-TRACESWO
 PB4.GPIOParameters=GPIO_Label
@@ -183,7 +185,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADCFreqValue=12000000
 RCC.AHBFreq_Value=24000000
 RCC.APB1Freq_Value=24000000
@@ -207,10 +209,12 @@ RCC.TimSysFreq_Value=24000000
 RCC.VCOOutput2Freq_Value=8000000
 RTC.IPParameters=OutPut
 RTC.OutPut=RTC_OUTPUTSOURCE_CALIBCLOCK
-SH.ADCx_IN1.0=ADC1_IN1,IN1
-SH.ADCx_IN1.ConfNb=1
 SH.ADCx_IN9.0=ADC1_IN9,IN9
 SH.ADCx_IN9.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Encoder_Interface
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,Encoder_Interface
+SH.S_TIM2_CH2.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
@@ -221,6 +225,9 @@ SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,DataSi
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_MASTER
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM2.EncoderMode=TIM_ENCODERMODE_TI12
+TIM2.IPParameters=AutoReloadPreload,EncoderMode
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.IPParameters=Channel-PWM Generation1 CH1
 USART1.IPParameters=VirtualMode,Parity
