--- a/firmware/stm32_nixie.ioc
+++ b/firmware/stm32_nixie.ioc
@@ -33,30 +33,32 @@ Mcu.Pin11=PA6
 Mcu.Pin12=PA7
 Mcu.Pin13=PB0
 Mcu.Pin14=PB1
-Mcu.Pin15=PB10
-Mcu.Pin16=PB11
-Mcu.Pin17=PB12
-Mcu.Pin18=PB13
-Mcu.Pin19=PB14
+Mcu.Pin15=PB2
+Mcu.Pin16=PB10
+Mcu.Pin17=PB11
+Mcu.Pin18=PB12
+Mcu.Pin19=PB13
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB15
-Mcu.Pin21=PA9
-Mcu.Pin22=PA10
-Mcu.Pin23=PA13
-Mcu.Pin24=PA14
-Mcu.Pin25=PA15
-Mcu.Pin26=PB3
-Mcu.Pin27=PB4
-Mcu.Pin28=VP_RTC_VS_RTC_Activate
-Mcu.Pin29=VP_SYS_VS_Systick
+Mcu.Pin20=PB14
+Mcu.Pin21=PB15
+Mcu.Pin22=PA9
+Mcu.Pin23=PA10
+Mcu.Pin24=PA13
+Mcu.Pin25=PA14
+Mcu.Pin26=PA15
+Mcu.Pin27=PB3
+Mcu.Pin28=PB4
+Mcu.Pin29=PB5
 Mcu.Pin3=PD0-OSC_IN
+Mcu.Pin30=VP_RTC_VS_RTC_Activate
+Mcu.Pin31=VP_SYS_VS_Systick
 Mcu.Pin4=PD1-OSC_OUT
 Mcu.Pin5=PA0-WKUP
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=30
+Mcu.PinsNb=32
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F100C4Tx
@@ -92,7 +94,7 @@ PA14.Locked=true
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
 PA15.GPIOParameters=GPIO_Label
-PA15.GPIO_Label=HB_LED2
+PA15.GPIO_Label=LED_GREEN
 PA15.Locked=true
 PA15.Signal=GPIO_Output
 PA2.GPIOParameters=GPIO_Label
@@ -160,13 +162,21 @@ PB15.GPIOParameters=GPIO_Label
 PB15.GPIO_Label=EN_12V
 PB15.Locked=true
 PB15.Signal=GPIO_Output
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=BOOT1
+PB2.Locked=true
+PB2.Signal=GPIO_Input
 PB3.Locked=true
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-TRACESWO
 PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=HB_LED1
+PB4.GPIO_Label=LED_RED
 PB4.Locked=true
 PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=LED_BLUE
+PB5.Locked=true
+PB5.Signal=GPIO_Output
 PC13-TAMPER-RTC.Mode=RTC OUT
 PC13-TAMPER-RTC.Signal=RTC_OUT
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
@@ -196,10 +206,10 @@ ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
-ProjectManager.PreviousToolchain=
+ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=nixie_clock.ioc
-ProjectManager.ProjectName=nixie_clock
+ProjectManager.ProjectFileName=stm32_nixie.ioc
+ProjectManager.ProjectName=stm32_nixie
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -265,4 +275,5 @@ VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
+isbadioc=false
 isbadioc=false
