--- a/firmware/stm32_nixie.ioc
+++ b/firmware/stm32_nixie.ioc
@@ -50,15 +50,19 @@ Mcu.Pin27=PB3
 Mcu.Pin28=PB4
 Mcu.Pin29=PB5
 Mcu.Pin3=PD0-OSC_IN
-Mcu.Pin30=VP_RTC_VS_RTC_Activate
-Mcu.Pin31=VP_SYS_VS_Systick
+Mcu.Pin30=PB6
+Mcu.Pin31=PB7
+Mcu.Pin32=PB8
+Mcu.Pin33=PB9
+Mcu.Pin34=VP_RTC_VS_RTC_Activate
+Mcu.Pin35=VP_SYS_VS_Systick
 Mcu.Pin4=PD1-OSC_OUT
 Mcu.Pin5=PA0-WKUP
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=32
+Mcu.PinsNb=36
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F100C4Tx
@@ -177,6 +181,25 @@ PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=LED_BLUE
 PB5.Locked=true
 PB5.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=SET_ILIM
+PB6.Locked=true
+PB6.Signal=GPIO_Output
+PB7.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB7.GPIO_Label=HW_REV2
+PB7.GPIO_PuPd=GPIO_PULLUP
+PB7.Locked=true
+PB7.Signal=GPIO_Input
+PB8.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB8.GPIO_Label=HW_REV1
+PB8.GPIO_PuPd=GPIO_PULLUP
+PB8.Locked=true
+PB8.Signal=GPIO_Input
+PB9.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB9.GPIO_Label=HW_REV0
+PB9.GPIO_PuPd=GPIO_PULLUP
+PB9.Locked=true
+PB9.Signal=GPIO_Input
 PC13-TAMPER-RTC.Mode=RTC OUT
 PC13-TAMPER-RTC.Signal=RTC_OUT
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
