--- a/firmware/stm32_nixie.ioc
+++ b/firmware/stm32_nixie.ioc
@@ -87,7 +87,7 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=ENC_B
 PA1.Signal=S_TIM2_CH2
 PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=UART_BL_RX
+PA10.GPIO_Label=UART1_BL_RX
 PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
@@ -102,12 +102,12 @@ PA15.GPIO_Label=LED_GREEN
 PA15.Locked=true
 PA15.Signal=GPIO_Output
 PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=UART_VCP_TX
+PA2.GPIO_Label=UART2_VCP_TX
 PA2.Locked=true
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=UART_VCP_RX
+PA3.GPIO_Label=UART2_VCP_RX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
@@ -131,7 +131,7 @@ PA7.Locked=true
 PA7.Mode=Simplex_Bidirectional_Master
 PA7.Signal=SPI1_MOSI
 PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=UART_BL_TX
+PA9.GPIO_Label=UART1_BL_TX
 PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
@@ -225,7 +225,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
