Updated HV5622 blanking pin to a GPIO for now until the dimming gets implemented later

--- a/firmware/stm32_nixie.ioc
+++ b/firmware/stm32_nixie.ioc
@@ -20,10 +20,9 @@ Mcu.IP3=RTC
 Mcu.IP4=SPI1
 Mcu.IP5=SYS
 Mcu.IP6=TIM2
-Mcu.IP7=TIM3
-Mcu.IP8=USART1
-Mcu.IP9=USART2
-Mcu.IPNb=10
+Mcu.IP7=USART1
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32F100C(4-6)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
@@ -124,7 +123,7 @@ PA5.Signal=SPI1_SCK
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=PWM_nBL
 PA6.Locked=true
-PA6.Signal=S_TIM3_CH1
+PA6.Signal=GPIO_Output
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=SPI_PICO
 PA7.Locked=true
@@ -241,7 +240,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADCFreqValue=12000000
 RCC.AHBFreq_Value=24000000
 RCC.APB1Freq_Value=24000000
@@ -273,8 +272,6 @@ SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Encoder_Interface
 SH.S_TIM2_CH1_ETR.ConfNb=1
 SH.S_TIM2_CH2.0=TIM2_CH2,Encoder_Interface
 SH.S_TIM2_CH2.ConfNb=1
-SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
-SH.S_TIM3_CH1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 SPI1.CLKPhase=SPI_PHASE_2EDGE
 SPI1.CalculateBaudRate=1.5 MBits/s
@@ -287,8 +284,6 @@ SPI1.VirtualType=VM_MASTER
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.EncoderMode=TIM_ENCODERMODE_TI12
 TIM2.IPParameters=AutoReloadPreload,EncoderMode
-TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM3.IPParameters=Channel-PWM Generation1 CH1
 USART1.IPParameters=VirtualMode,Parity
 USART1.Parity=PARITY_EVEN
 USART1.VirtualMode=VM_ASYNC
